Changes with Apache 1.3.27

  *) Add ProtocolReqCheck directive, which determines if Apache will
     check for a valid protocol string in the request (eg: HTTP/1.1)
     and return HTTP_BAD_REQUEST if not valid. Versions of Apache
     prior to 1.3.26 would silently ignore bad protocol strings, but
     1.3.26 included a more strict check. This makes it runtime
     configurable. The default is On. This also removes the requirement
     on an ANSI sscanf() implementation. [Jim Jagielski]

  *) NetWare: implemented file locking in mod_rewrite for the NetWare
     CLib platform. This fixes a bug that prevented rewrite logging 
     from working. [Brad Nicholes]

Changes with Apache 1.3.26

  *) Potential NULL referencing fixed in the CGI module. It had
     been there for 5 years. [Justin Erenkrantz]

  *) Ensure that we set the result value in ap_strtol before
     we return it. [Justin Erenkrantz, Jim Jagielski]

Changes with Apache 1.3.25

  *) SECURITY: Code changes required to address and close the 
     security issues in CAN-2002-0392 (cve.mitre.org) [CERT VU#944335].
     To support this, we utilize the ANSI functionality of
     strtol, and provide ap_strtol for completeness.
     [Aaron Bannert, Justin Erenkrantz, Jim Jagielski, Brian Pane,
      William Rowe, Cliff Woolley]
     
  *) PORT: With OpenBSD 3.1 and up, allow modules to work on their
     ELF-based architectures. [Brad <brad@openbsd.org>]

  *) Add X-Forwarded-Host and X-Forwarded-Server to X-Forwarded-For
     to the proxy. [Thomas Eibner <thomas@stderr.net>]

  *) Fix a problem in mod_proxy: it would not set the number of bytes
     transferred, so other modules could not access the value from
     the request_rec->bytes_sent field.
     [Anthony Howe <achowe at snert.com>] PR#6841

  *) Fix a problem in mod_rewrite which would lead to 400 Bad Request
     responses for rewriting rules which resulted in a local path.
     Note: This will also reject invalid requests like