@@ -1,5 +1,13 @@
 Changes with Apache 1.3.27
 
+  *) In 1.3.26, a null or all blank Content-Length field would be
+     triggered as an error; previous versions would silently ignore
+     this and assume 0. As a special case, we now allow this and
+     behave as we previously did. HOWEVER, previous versions would
+     also silently accept bogus C-L values; We do NOT do that. That
+     *is* an invalid value and we treat it as such.
+     [Jim Jagielski]
+
   *) Add ProtocolReqCheck directive, which determines if Apache will
      check for a valid protocol string in the request (eg: HTTP/1.1)
      and return HTTP_BAD_REQUEST if not valid. Versions of Apache
